--- a/paper/sec/preliminaries.tex
+++ b/paper/sec/preliminaries.tex
@@ -57,6 +57,7 @@ The first part of the paper provides explicit formulas for this $f$-vector.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Cellular diagonals for the permutahedra}
+\label{s:diagonals-permutahedra}
 
 Let us first set up some notations that will be of use throughout the paper. 
 A set $\sigma_I := \bigcup_{i\in I} \sigma_i$ is a \emph{partition} of $[n]:=\{1,\ldots,n\}$ if $\bigcup_{i\in I} \sigma_i = [n]$ and $\sigma_i \cap \sigma_j = \emptyset$ for $i \neq j$.
