--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -149,7 +149,7 @@ where $O(n)$ stands for either $\LA(n), \LA(n)^\op, \SU(n)$ or $\SU(n)^\op$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Isomorphisms between permutahedral operadic diagonals}
+\subsection{Isomorphisms between permutahedra's operadic diagonals}
 
 Let $P$ be a centrally symmetric polytope, and let $s : P \to P$ be its involution, given by taking a point $p \in P$ to its reflection $s(p)$ with respect to the center of symmetry of $P$. 
 Note that this map is cellular, and induces an involution on the face lattice of $P$. 
@@ -163,6 +163,7 @@ As we have already remarked \Guillaume{in Rem X}, the polytope of diagonals of $
 In the case of the permutahedron it sends $\LAD$ to $(\LAD)^\op$ and $\SUD$ to $(\SUD)^\op$.
 
 \begin{theorem}
+    \label{thm:bijection-operadic-diagonals}
     For $P$ the permutahedron, the involutions $t$ and $rs \times rs$ are cellular isomorphisms between the four operadic diagonals, through the following commutative diagram: 
     \begin{center}
         \begin{tikzcd}
@@ -192,36 +193,36 @@ In the case of the permutahedron it sends $\LAD$ to $(\LAD)^\op$ and $\SUD$ to $
 
 \subsection{Facets of operadic diagonals}
 
-In this section we establish a bijection between the facets of $\triangle$ and a family of pairs of unordered partitions introduced and enumerated in a series of 3 papers \cite{chen1969computer,chen1971tables,kajitani1982number}. An intermediary bijection to a type of bipartite tree is of particular importance and provides [...].
-In particular, we obtain that the number of facets in the image of the diagonal $\triangle_n$ of the $n$-dimensional permutahedron is $2(n+1)^{n-2}$ (\OEIS{A007334}), and more precisely that the pairs of dimensions $(k,n-k)$ are counted by the formula $\frac{1}{k+1}\binom{n+1}{k}(k+1)^{n-k}(n+1-k)^{k}$. 
-\Guillaume{OEIS ref?}
-
-
-\subsubsection{Essential complementary partitions and bipartite trees}
-Let us recall some basic definitions and results from the series of papers \cite{chen1969computer,chen1971tables,kajitani1982number}.
+We have seen in \cref{thm:vertices2nBraidArrangement} that facets of any diagonal of the permutahedron are in bijection with $(2,n)$-trees, that is pair of partitions whose intersection graph is a tree.
+These are precisely the \emph{essential complementary partitions} studied in \cite{chen1969computer,chen1971tables,kajitani1982number}. 
+Here we describe a specific planar embedding of the $(2,n)$-trees for each operadic diagonal. 
+\Guillaume{Simplify and unify exposition with Section 1}
 
 \begin{definition}
-A set of \emph{distinct representatives} of a partition $\sigma_I$ is a set $M\subset [n]$ such that $\forall i \in I,|\sigma_i \cap M| = 1$.
+A set of \emph{distinct representatives} of an (unordered) partition $\sigma_I$ is a set $M\subset [n]$ such that $\forall i \in I,|\sigma_i \cap M| = 1$.
 \end{definition}
 
 \begin{definition}
-A pair of partitions $(\sigma_L,\tau_R)$ is said to be \emph{complementary} if there exists $M\subset [n]$ and $m \in M$ such that $M$ and $([n]\ssm M) \cup \{m\}$ are distinct representatives of $\sigma_L$ and $\tau_R$, respectively.
-It is furthermore \emph{essential} if there does not exist proper subsets $ L'\subset L$, $R'\subset R$ and $N' \subset [n]$ such that $(\sigma_{L'},\tau_{R'})$ is a complementary partition of $N'$.
+A pair of partitions $(\sigma_L,\tau_R)$ is 
+\begin{enumerate} 
+    \item \emph{complementary} if there exists $M\subset [n]$ and $m \in M$ such that $M$ and $([n]\ssm M) \cup \{m\}$ are distinct representatives of $\sigma_L$ and $\tau_R$, respectively,
+    \item it is furthermore \emph{essential} if there does not exist proper subsets $ L'\subset L$, $R'\subset R$ and $N \subset [n]$ such that $(\sigma_{L'},\tau_{R'})$ is a complementary partition of $N$.
+\end{enumerate}
 \end{definition}
+
+An equivalent definition is the following. 
+
 \begin{definition}
 A pair of partitions $(\sigma_L,\tau_R)$ is said to be 
 \begin{enumerate}
-	\item \emph{complimentary}, if $\forall l\in L, r\in R$ we have that $|\sigma_l \cap \tau_r| \leq 1$
-	\item \emph{essential}, if there are no proper subsets of $L'\subset L,R'\subset R$ such that $\cup_{l \in L} \sigma_l = \cup_{r \in R'} \tau_r$
+	\item \emph{complementary}, if $\forall l\in L, r\in R$ we have that $|\sigma_l \cap \tau_r| \leq 1$,
+	\item \emph{essential}, if there are no proper subsets of $L'\subset L,R'\subset R$ such that $\cup_{l \in L'} \sigma_l = \cup_{r \in R'} \tau_r$.
 \end{enumerate}	
-
-\end{definition}\Kurt{Maybe can immediately switch to  Vincent's variant of def?}
+\end{definition}
 
 In cases where there is no ambiguity we will drop the subscripts $L,R$.
 We shall denote the set of all essential complementary pairs of partitions of $[n]$ by $\EC$.
 Let us emphasize that the pairs of partitions of $\EC$ are \emph{unordered}.
-
-\Guillaume{Notations to be uniformized from here}
 
 \begin{example}
 For $n=2$, the two essential complementary partitions are $1|2 \times 12$ and $12 \times 1|2$. For $n=3$, the eight essential complementary partitions are
@@ -238,72 +239,60 @@ For $n=2$, the two essential complementary partitions are $1|2 \times 12$ and $1
 For a larger example see \cref{ex:ECbijection}. 
 \end{example}
 
-The reader will have observed from this example, that many pairs of partitions are not essential and complementary.
-This can be checked directly from the definition, however, a graphical connection which we now introduce provides a simpler interpretation.
-A \emph{tree} is a simply connected graph with no cycles. 
-A \emph{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other.
-We say a bipartite graph is \emph{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. 
-We say a graph with $n$ edges is \emph{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
+%A \emph{tree} is a simply connected graph with no cycles. 
+%A \emph{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other.
+%We say a bipartite graph is \emph{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. 
+%We say a graph with $n$ edges is \emph{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
 
-\begin{proposition} [{\cite[Theorem 3]{kajitani1982number}}] 
-\label{EC Graph Bijection}
-The set of essential complementary partitions $\EC$ and the set edge labelled bipartite trees $\BT$ are in bijection.
-\end{proposition}
-\begin{proof}
-Informally, given a partition pair $(\sigma,\tau)$, the corresponding graph $G((\sigma,\tau))$ has the subpartitions of each partition as its vertices, and two vertices are connected by an edge if the subpartitions share a common element. By convention we place the vertices of 
-For an example of this bijection see \cref{ex:ECbijection}.
-\end{proof}
+As we have seen in the proof of \cref{thm:vertices2nBraidArrangement}, essential complementary partitions are in bijection with $(2,n)$-trees.
+Given an essential complementary pair $(\sigma,\tau)$, the corresponding $(2,n)$-tree has the blocks of each partition as its vertices, and two such vertices are connected by an edge if the two blocks share a common element, which labels the edge, see \cref{ex:ECbijection}.
 
-\subsubsection{Bijection with the facets of the diagonal}
-
-In this section we denote by $\OP$ be the set of pairs of ordered partitions of $[n]$ labeling \emph{facets} of the diagonal $\triangle$. \BDO{We should perhaps change the notation for $\OP$. What about $\triangle_f$ or $\triangle_M$ ?}
-\Guillaume{I would keep the indices to the minimum}
 
 \begin{theorem}
 \label{thm:facets}
-Facets of the diagonal and essential complementary partitions are in bijection through the inverse functions $u:\OP \to \EC$ and $o:\EC\to \OP$, where
+The facets of any operadic diagonal $\OP$ are in bijection with essential complementary partitions, through the inverse functions $u:\OP \to \EC$ and $o:\EC\to \OP$, where
 \begin{enumerate}
-    \item The function $u$ forgets the order of the ordered partition pair.
-    \item The function $o$ uniquely orders an essential complementary partition pair via the minimal $(I,J)$-pairs defining the diagonal. 
+    \item the function $u$ forgets the order of the ordered partition pair,
+    \item the function $o$ uniquely orders an essential complementary partition pair via the minimal $(I,J)$-pairs defining the diagonal. 
 \end{enumerate}
+In particular, this defines a particular planar embedding of each $(2,n)$-tree, as illustrated in \cref{ex:ECbijection}.
 \end{theorem}
-An immediate corollary of this theorem, and an enumeration of labelled bipartite trees first done in \cite{kajitani1982number}, is that there are $2(n+1)^{n-2}$ facets $\OP_n$.
- This enumeration will be refined in the next section.
+
 We shall prove this theorem by establishing the necessary total order, showing that the functions are well defined, and then showing that they are injective.
+We will work with the $\LAD$ diagonal, but the proofs can be straightforwardly modified to accomodate any of the other three operadic diagonals. 
 
 \begin{lemma} 
 \label{l:u-well-defined}
 The function $u:\OP \to \EC$ that forgets the order in a pair of partitions is well defined.
 \end{lemma}
 \begin{proof}
-Let $P \in \OP_n$. Then $G(u(P))$ is a graph with $l+r=n+1$ vertices, and $n$ edges. Furthermore, as no vertices can be isolated it must be the case that this graph is a tree. 
-It is straightforward to verify that $G(u(P))$ must be labeled bipartite tree, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of \cite[Theorem 2]{kajitani1982number}.
-
-Let $G'$ be a copy of $G(u(P))$. 
-While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. 
-As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. 
-This edge specifies the element $p$ of the distinct representatives.
+Let $(\sigma,\tau)$ be a pair of ordered partitions forming a facet of $\LAD$. 
+Their intersection graph has $n+1$ vertices and $n$ edges, and as no vertices can be isolated it must be a tree. 
+%It is straightforward to verify that it must be a labeled bipartite tree, but here is how we may explicitly produce the necessary distinct representatives using an algorithm of \cite[Theorem 2]{kajitani1982number}.
+%Let $G'$ be a copy of $G(u(P))$. 
+%While there is a vertex of degree $1$ in $G'$ delete it and add the sole edge of that vertex as a distinct representative of the corresponding partition of that vertex. 
+%As $G'$ is a tree this process can continue until there is a single edge connecting two vertices of degree $1$. 
+%This edge specifies the element $p$ of the distinct representatives.
 \end{proof}
 
 \begin{construction} 
-\label{const:total order on blocks of EC}
-For $P=(\sigma,\tau) = (\bigcup_{l\in L}\sigma_l,\bigcup_{r\in R} \tau_r) \in \EC$ an essential complementary pair, we construct total orders on the blocks of $\sigma$ and $\tau$ in three steps:
+\label{const:total}
+For $(\sigma,\tau) = (\bigcup_{l\in L}\sigma_l,\bigcup_{r\in R} \tau_r)$ an essential complementary pair, we construct total orders on the blocks of $\sigma$ and $\tau$ in three steps:
 \begin{enumerate}
-    \item For $\sigma_l,\sigma_{l'} \in \sigma$ considered as vertices in $G(P)$, there exists a unique minimal path of even cardinality $p_{l,l'}$ connecting them.
-    We partition $p_{l,l'}=I\cup J$ where $I$ contains the minimal edge, and the path alternates between elements of $I,J$. Likewise, for $\tau_r,\tau_{r'}\in \tau$ there exists a path and decomposition $p_{r,r'} = I\cup J$.
-    \item Direct each path so that all $I$ point left to right, and all $J$ point right to left.
-    \item We say $\sigma_l< \sigma_{l'}$ (or $\tau_r < \tau_{r'}$) if the path is directed as $\sigma_l \to \sigma_{l'}$ ($\tau_r \to \tau_{r'}$).
+    \item For any two blocks $\sigma_k,\sigma_l$ in $\sigma$ or $\tau$, there is a unique minimal path $\gamma$ of even cardinality  connecting them.
+    We partition $\gamma=I\cup J$ where $\min(I\cup J) \in I$ and the path alternates between elements of $I$ and $J$;
+    \item Direct each path $\gamma$ so that all the edges of $I$ (resp. $J$) go from left to right (resp. right to left);
+    \item We say $\sigma_k< \sigma_l$ if the path joining them is directed from $\sigma_k$ to $\sigma_l$.
 \end{enumerate}
 \end{construction}
 
 \begin{proof}
-We first show our binary relation is well defined before verifying that it defines a total order on $G(P)$ and hence $P$ via the bijection of \cref{EC Graph Bijection}.
-
-As $G(P)$ is a bipartite tree, every vertex is connected, and every path connecting two vertices on the same side must be of even length. 
-As $I$ and $J$ partition the path in an alternating fashion i.e. $p=(i_1,j_1,i_2,j_2,\dots, )$, we can orient the path by forcing $I$ to point left and $J$ to point right. 
+We first show our binary relation is well defined before verifying that it defines a total order on the vertices of the $(2,n)$-tree.
+In a bipartite tree, every vertex is connected, and every path connecting two vertices on the same side must be of even length. 
+As $I$ and $J$ partition the path in an alternating fashion i.e. $\gamma=(i_1,j_1,i_2,j_2,\dots)$, we can orient it by forcing each edge of $I$ (resp. $J$) to point to the right (resp. left). 
 This order is clearly total, reflexive (by convention) and anti-symmetric, what remains to be checked is its transitivity. 
 
-Let $p_{ab}$ denote the unique maximal path between two vertices $a$ and $b$ on the left of $G(P)$, that is two blocks of $\sigma$. 
+Let $\gamma$ denote the unique maximal path between two vertices $a$ and $b$ on the left of the tree, that is two blocks of $\sigma$. 
 Let $I_{ab}$ denote the set of left-to-right edges in this path, and let $J_{ab}$ denote its complement. 
 Then, we have 
 \begin{equation}
@@ -311,12 +300,13 @@ Then, we have
     a < b \iff \min(I_{ab}\cup J_{ab})=\min(I_{ab}) \ . 
 \end{equation}
 Suppose now that $a < b$ and $b < c$.
-Since $p_{ac}= (p_{ab} \cup p_{bc}) \ssm (p_{ab} \cap p_{bc})$, we have $$ I_{ac}=(I_{ab}\cup I_{bc}) \ssm (J_{ab} \cup J_{bc}) \text{ and } J_{ac}=(J_{ab}\cup J_{bc}) \ssm (I_{ab} \cup I_{bc}) \ , $$ and from the condition (\ref{eq:order}) above it is clear that $\min(I_{ac}\cup J_{ac})=\min(I_{ac})$, which completes the proof of the transitivity for the total order on $\sigma$. 
+Since $\gamma_{ac}= (\gamma_{ab} \cup \gamma_{bc}) \ssm (\gamma_{ab} \cap \gamma_{bc})$, we have $$ I_{ac}=(I_{ab}\cup I_{bc}) \ssm (J_{ab} \cup J_{bc}) \text{ and } J_{ac}=(J_{ab}\cup J_{bc}) \ssm (I_{ab} \cup I_{bc}) \ , $$ and from the condition (\ref{eq:order}) above it is clear that $\min(I_{ac}\cup J_{ac})=\min(I_{ac})$, which completes the proof of the transitivity for the total order on $\sigma$. 
 The proof for $\tau$ is similar. 
 \end{proof}
 
-\begin{example}\label{ex:ECbijection}
-We now illustrate the ordering on the essential complementary partition $15|234|6|7 \times 13|2|46|57$. The fact that this is an essential complementary partition is easily visually verified by constructing its bipartite tree, and this tree, on the left, admits the ordering on the right.
+\begin{example}
+\label{ex:ECbijection}
+We now illustrate the ordering (right) of the pair of essential complementary partitions $15|234|6|7 \times 13|2|46|57$ (left).
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
 \node (1) at (-1.5, -1) {$15$};
@@ -360,27 +350,27 @@ $\quad$
 %
 \end{tikzpicture}
 \end{center}
-Here are two examples paths providing order information.
+Here are two examples paths providing order information:
 \begin{align*}
-	7 <_L 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234\\
-	57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234 \xrightarrow{4} 46
+	7 <_L 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234 \ , \\
+	57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234 \xrightarrow{4} 46 \ .
 \end{align*}
 \end{example}
 
+This order far from being arbitrary provides the unique way to order an essential complementary partition pair into an ordered partition pair of $\LAD$, as we shall demonstrate next.
+First we need a geometrical result. 
 
-This order far from being arbitrary provides the unique way to order an essential complementary partition pair into an ordered partition pair of $\triangle$, as we shall demonstrate next.
-
-First we need a geometrical lemma. \Kurt{notation clash...}
 \begin{proposition}
-    The paths between adjacents vertices of $P_L$ or $P_R$ are in bijection with the minimal $(I,J)$-pairs.
+    \label{prop:geometrical-IJ}
+    The paths between adjacents vertices of $\sigma$ or $\tau$ are in bijection with the minimal $(I,J)$-pairs (see \cref{s:diagonals-permutahedra}).
 \end{proposition}
 
 \begin{proof}
-    By \cref{p:minimal-IJ-pairs}, it suffices to show that the paths between adjacent vertices of $P_L$ are in bijection with the solutions of the system of equations of the form $(\rho^1,\sigma^2)$. 
+    By \cref{p:minimal-IJ-pairs}, it suffices to show that the paths between adjacent vertices of $\sigma$ are in bijection with the solutions of the system of equations of the form $(\rho^1,\sigma^2)$. 
     To ease notation let us write $\rho$ for $\rho^1$ and $\sigma$ for $\sigma^1$. 
     Suppose that $\rho$ is obtained from $\sigma$ by merging the two blocks $\sigma_a$ and $\sigma_b$. 
     The two equations $\langle \vec \sigma_a, x \rangle =0$ and $\langle \vec \sigma_b, x \rangle =0$ now become $\langle \vec \sigma_a + \vec \sigma_b, x \rangle =0$; nothing else changes in the system. 
-    Since the solution to the system $(\sigma^1,\sigma^2)$ was $x=0$, now the solution is of dimension $1$, and it is given precisely by the path between $a$ and $b$ in $G(P)$.
+    Since the solution to the system $(\sigma^1,\sigma^2)$ was $x=0$, now the solution is of dimension $1$, and it is given precisely by the path between $a$ and $b$.
     Such a path is given by an alternating sequence of vertices and edges $\sigma_1 \eqdef \sigma_a, e_1, \sigma_2, e_2, \ldots, e_{k-1}, \sigma_k \eqdef \sigma_b$. 
     Every edge $e_i \in \{1,\ldots, n\}$ is by definition the intersection $\sigma_{i} \cap \sigma_{i+1}$; thus it is the only common non-zero coordinate between $\vec \sigma_{i}$ and $\vec \sigma_{i+1}$.
     Thus the path encodes the series of equations $x_{e_1}+x_{e_{k-1}}=0$, $x_{e_1}+x_{e_2}=0$, $x_{e_2}+x_{e_3}=0$, $\ldots$, $x_{e_{k-2}}+x_{e_{k-1}}=0$. 
@@ -388,66 +378,66 @@ First we need a geometrical lemma. \Kurt{notation clash...}
 \end{proof}
 
 \begin{lemma} 
-\label{o well defined}
-The function $o:\EC \to \OP$ that orders an essential complementary pair is well defined.
+\label{l:o-well-defined}
+The function $o:\EC \to \LAD$ which orders an essential complementary pair is well defined.
 \end{lemma}
 
 \begin{proof}
-Let $P=(\sigma,\tau) = (\bigcup_{l\in L}\sigma_l,\bigcup_{r\in R} \tau_r) \in \EC$ and consider $o(P)$. 
-We first show that every $(I,J)$-condition, for $(I,J) \in D(n)$, which corresponds to a path between vertices is satisfied. 
-In particular, this statement will be true for minimal $(I,J)$-pairs, which will be enough in virtue of \cref{p:minimal}. 
-Suppose $I,J$ corresponds to a path between two vertices on the left, i.e.
+Consider the ordering $o(\sigma,\tau)$ of the pair $(\sigma,\tau)$ given by \cref{const:total}. 
+We first show that every $(I,J)$-condition, for $(I,J) \in \LA(n)$, which corresponds to a path between vertices is satisfied. 
+In particular, this statement will be true for paths between adjacent vertices, which are exactly the minimal $(I,J)$-pairs according to \cref{prop:geometrical-IJ}.
+This will in turn allow us to conclude since testing the minimal $(I,J)$-pairs is equivalent to testing all $(I,J)$-pairs as stated in \cref{p:minimal}. 
+Suppose that $I,J$ corresponds to a path between two vertices on the left, i.e.
 \begin{align*}
     \sigma_l = \sigma_{l_1} \xrightarrow{i_1} \tau_{r_1}\xrightarrow{j_1} \sigma_{l_2} \xrightarrow{i_2}\dots \xrightarrow{i_{k}} \tau_{r_{k-1}} \xrightarrow{j_k} \sigma_{l_k}= \sigma_{l'}
 \end{align*}
-By construction we have that $I = \{i_1,\dots,i_k\},J=\{j_1,\dots,j_k\} \in D(n)$ (note we are ordering $I$ and $J$ by the path, so it is not necessarily the case that $\min I = i_1$). 
-Furthermore, each sub partition of $\tau$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. 
-As such for any ordering of the sub-partitions of $\tau$ we have that \Kurt{Could use [-] notation, but feels clearer to write out?}
+By construction we have that $(I = \{i_1,\dots,i_k\},J=\{j_1,\dots,j_k\}) \in \LA(n)$ (note we are ordering $I$ and $J$ by the path, so it is not necessarily the case that $\min I = i_1$). 
+Furthermore, each block of $\tau$ either contains a single element of $I$ and a single element of $J$, or it contains no elements of $I$ and no elements of $J$. 
+As such for any ordering of the blocks of $\tau$ we have that
 \begin{align*}
-    \forall m, \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap I \bigg| = \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap J \bigg|
+    \forall m, \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap I \bigg| = \bigg|\bigcup_{1\leq k \leq m} \tau_{k} \cap J \bigg| \ .
 \end{align*}
-Hence in order for this $D(n)$ condition to be satisfied it must be the case that for some ordering of the sub-partitions of $\sigma$ we have
+Hence in order for this $\LA(n)$ condition to be satisfied it must be the case that for some ordering of the blocks of $\sigma$ we have
 \begin{align*}
-    \exists m, \bigg| \bigcup_{1\leq k \leq m} \sigma_k \cap I \bigg| > \bigg|\bigcup_{1\leq k \leq m} \sigma_k \cap J \bigg|
+    \exists m, \bigg| \bigcup_{1\leq k \leq m} \sigma_k \cap I \bigg| > \bigg|\bigcup_{1\leq k \leq m} \sigma_k \cap J \bigg| \ .
 \end{align*}
-Every sub-partition of $\sigma$ excluding $\sigma_l$ and $\sigma_{l'}$ either contains no elements of both $I$ and $J$, or it contains a single element of $I$ and a single element of $J$. 
+Every block of $\sigma$ excluding $\sigma_l$ and $\sigma_{l'}$ either contains no elements of both $I$ and $J$, or contains a single element of $I$ and a single element of $J$. 
 So the only way for the condition to be satisfied is for $\sigma_l$ to come before $\sigma_{l'}$, which is precisely what is required by the total order.
-
-If $I,J$ correspond to a path between two vertices on the right,
+If the sets $(I,J)$ correspond to a path between two vertices on the right
 \begin{align*}
-    \tau_r = \tau_{r_1} \xrightarrow{j_1} \sigma_{l_1}\xrightarrow{i_1} \tau_{r_2} \xrightarrow{j_2}\dots \xrightarrow{j_{k}} \sigma_{l_{k-1}} \xrightarrow{1_k} \tau_{r_k}=\tau_{r'}
+    \tau_r = \tau_{r_1} \xrightarrow{j_1} \sigma_{l_1}\xrightarrow{i_1} \tau_{r_2} \xrightarrow{j_2}\dots \xrightarrow{j_{k}} \sigma_{l_{k-1}} \xrightarrow{1_k} \tau_{r_k}=\tau_{r'} \ ,
 \end{align*}
-then a similar chain of logic implies we must have an ordering of the sub-partitions of $\tau$ such that
+then a similar chain of logic implies we must have an ordering of the blocks of $\tau$ such that
 \begin{align*}
-    \exists m, |\bigcup_{1\leq k \leq m}\tau_k \cap I| < |\bigcup_{1\leq k \leq m} \tau_k \cap J|
+    \exists m, \bigg|\bigcup_{1\leq k \leq m}\tau_k \cap I\bigg| < \bigg|\bigcup_{1\leq k \leq m} \tau_k \cap J\bigg| \ , 
 \end{align*}
 and this can only happen if $\tau_r$ comes before $\tau_{r'}$.
 \end{proof}
 
 \begin{remark}
     It would be interesting to know if there is a geometrical interpretation of the paths that are not between adjacent vertices. 
-    
 \end{remark}
 
-To complete the proof of \cref{thm:facets}, it remains to show that both $u:\OP \to \EC$ and $o:\EC\to \OP$ are injective, with the other function being their inverse.
+To complete the proof of \cref{thm:facets}, it remains to show that both $u:\LAD \to \EC$ and $o:\EC\to \LAD$ are injective, with the other function being their inverse.
 
 \begin{proof}[{Proof of \cref{thm:facets}}]
 The forgetful function $u$ is clearly the inverse to $o$ as forgetting any assigned order will clearly return the original essential complementary partition pair. 
-The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the sub-partitions which is compatible with the $D(n)$ conditions.
+The ordering function $o$ is the inverse to $u$ as it returns the sole ordering of the blocks which is compatible with the $\LA(n)$ conditions.
 \end{proof}
 
-So the results of this section provide us with the follow characterisation of facets of the $\LAD$ diagonal.
-\begin{proposition} \label{prop:LAD are ordered EC}
-The facets of the $\LAD$ diagonal are ordered essential complementary partitions in which the minimal element of each path is traversed left to right.
-\end{proposition}
+So, we have the follow characterisation of facets of the $\LAD$ and $\SUD$ diagonals (the second one being obtained by changing slightly \cref{const:total} according to the definition of the $\SU$ order).
+We omit the adaptation for the two opposite diagonals, which is immediate.
 
-The bijection $\theta:\SUD \to \LAD$ may be used to characterise the facets of $\SUD$ as being ordered essential complementary partitions. The bijective ordering function $o':\EC\to \SUD$ is identical to \cref{const:total order on blocks of EC}, but orients each path so that the maximal element points right to left, i.e. 
-\begin{proposition}\label{prop:SUD are ordered EC}
-The facets of the $\SUD$ diagonal are ordered essential complementary partitions in which the maximal element of each path is traversed right to left.
-\end{proposition}
-We illustrate by example how the bijection $\theta$ immediately induces this result, and note that the result can also be obtained by simply altering the constructions of the section in the obvious manner for the $\SUD$ diagonal.
-\begin{example}\label{ex:theta and path translation}
-We apply the bijection $\theta:\LAD\to \SUD$ to a previously encountered element of $\LAD$, \cref{ex:ECbijection}.
+\begin{corollary} 
+\label{prop:LAD-ordered-EC}
+The facets of the $\LAD$ (resp. $\SUD$) diagonal are ordered essential complementary partitions in which the minimal (resp. maximal) element of each path is traversed from left to right (resp. right to left).
+\end{corollary}
+
+We illustrate how the bijection $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} relates the two results.
+
+\begin{example}
+\label{ex:theta-path-translation}
+We apply the bijection $rs\times rs$ to the element of $\LAD$ from \cref{ex:ECbijection}
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
 \node (1) at (-1.5, -1) {$15$};
@@ -469,19 +459,19 @@ We apply the bijection $\theta:\LAD\to \SUD$ to a previously encountered element
 \draw[-] (4)--(6);
 %
 \end{tikzpicture}
-$
-\xrightarrow{\theta}
-$
+\quad
+\raisebox{3em}{$\xrightarrow{rs\times rs}$}
+\quad
 \begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$24$};
-\node (3) at (-1.5, -3) {$57$};
-\node (4) at (-1.5, -4) {$6$};
+\node (1) at (1.5, -4) {$13$};
+\node (2) at (1.5, -3) {$24$};
+\node (3) at (1.5, -2) {$57$};
+\node (4) at (1.5, -1) {$6$};
 %
-\node (5) at (1.5, -1) {$37$};
-\node (6) at (1.5, -2) {$1$};
-\node (7) at (1.5, -3) {$456$};
-\node (8) at (1.5, -4) {$2$};
+\node (5) at (-1.5, -4) {$37$};
+\node (6) at (-1.5, -3) {$1$};
+\node (7) at (-1.5, -2) {$456$};
+\node (8) at (-1.5, -1) {$2$};
 %
 \draw[-] (1)--(5);
 \draw[-] (1)--(6); 
@@ -491,19 +481,18 @@ $
 \draw[-] (3)--(7);
 \draw[-] (4)--(7);
 %
-\end{tikzpicture}
+\end{tikzpicture} \ .
 \end{center}
-Observe that the $\LA(n)$ conditions corresponding to paths, such as $( \{1,4,\},\{3,5\}) \in \LA(n)$
+Observe that the $\LA(7)$ conditions corresponding to paths, such as $( \{1,4\},\{3,5\}) \in \LA(7)$
 \begin{align*}
-    57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234 \xrightarrow{4} 46
+    57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=\min(I\cup J)} 13 \xrightarrow{3} 234 \xrightarrow{4} 46
 \end{align*}
-are mapped to $\SU(n)$ conditions corresponding to paths, e.g. the prior $I,J$ condition maps to $( \{3,5 \},\{4,7\}) \in \SU(n)$, and
+are mapped to $\SU(7)$ conditions corresponding to paths, e.g. the prior $(I,J)$-condition maps to $(r(J),r(I))=( \{3,5 \},\{4,7\}) \in \SU(7)$, and
 \begin{align*}
-    13 <_L 24 \text{ as } 13 \xrightarrow{3} 37 \xrightarrow{7=J^*} 57 \xrightarrow{5} 456 \xrightarrow{4} 24
+    24 <_R 13 \text{ as } 24 \xrightarrow{4} 456 \xrightarrow{5} 57 \xrightarrow{7=\max(r(J)\cup r(I))} 37 \xrightarrow{3} 13 \ .
 \end{align*}
-
 \end{example}
-Note the composite $\LAD \xrightarrow{f} \EC \xrightarrow{o'} \SUD$ provides another bijection of facets, however this map is not equal to $\theta$ and is not defined on the other faces.
+Note that the composite $\LAD \xrightarrow{u} \EC \xrightarrow{o} \SUD$ provides another bijection between facets, however this map is not equal to $rs \times rs$ and is not defined on the other faces.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -775,7 +764,7 @@ This gives a geometric, alternative proof of the fact that all known diagonals o
 \Guillaume{Now we have matrix representation for free!}
 
 \begin{example} \label{ex:shifts}
-The permutation $5714632$ corresponds to the strong complementary pair $(\sigma,\tau)  \eqdef  5|17|4|236 \times 57|146|3|2$. We now illustrate all possible shifts of this strong complimentary pair. The possible left shifts (indicated by their corresponding critical element, and drawn to avoid crossings) are
+The permutation $5714632$ corresponds to the strong complementary pair $(\sigma,\tau)  \eqdef  5|17|4|236 \times 57|146|3|2$. We now illustrate all possible shifts of this strong complementary pair. The possible left shifts (indicated by their corresponding critical element, and drawn to avoid crossings) are
 \begin{center}
 \begin{tikzcd}
 & 5|17|4|236 \times \tau \arrow[ld,"p=3"] \arrow[d,"p=1"] \arrow[rd,"p=2"]\\
@@ -866,7 +855,7 @@ All $(\sigma,\tau)\in SCP$ are in both $\LAD$ and $\SUD$, as a consequence of
 \end{enumerate}
 \end{lemma}
 \begin{proof}
-The path description of $(\sigma,\tau)$ is a straightforward observation. The minima of these adjacent paths are traversed left to right, and the maxima right to left. As such, by Propositions \ref{prop:LAD are ordered EC} and \ref{prop:SUD are ordered EC}, $SCP$ is a subset of both $\LAD$ and $\SUD$.
+The path description of $(\sigma,\tau)$ is a straightforward observation. The minima of these adjacent paths are traversed left to right, and the maxima right to left. As such, by Propositions \ref{prop:LAD-ordered-EC} and \ref{prop:SUD are ordered EC}, $SCP$ is a subset of both $\LAD$ and $\SUD$.
 \end{proof}
 
 \Kurt{better presentation of subset diagonal...}
