Delete old sections (made back up)

--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -550,252 +550,7 @@ It follows directly from the fish condition: if the fish condition is satisfied,
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{The Saneblidze--Umble diagonal}
-
-Here we prove that the diagonal $\OP$ admits a combinatorial description completely analogous to that of the Saneblidze--Umble diagonal \cite{SaneblidzeUmble04}. 
-A direct corollary is that the two diagonals are in bijection, and moreover that the SU diagonal can be obtained from a certain choice of chambers in the fundamental hyperplane arrangements of the permutahedra, resolving a conjecture made in \cite{LA21}.
-In particular, this provides an alternative proof that all known diagonals on the associahedra agree \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
-
-Given any permutation, one can canonically produce a facet of the diagonal in the following way. 
-
-\begin{definition}
-    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are decreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
-\end{definition}
-
-An example is shown in \cref{fig:strong-complementary}.
-The same argument as in \cref{l:u-well-defined} shows that the underlying pair of partitions is an essential complementary pair. 
-Moreover we see directly that any path between adjacent vertices has length $2$, and that its minimum is always traversed from left to right, hence all strong complementary pairs are in $\OP$. 
-
-\begin{figure}[h!]
-\begin{tikzpicture}[scale=.7]  
-\node (p) at (0, 0) {$2|5|37|146 \times 257|36|4|1$};
-\node (1) at (-1.5, -1) {$2$};
-\node (2) at (-1.5, -2) {$5$};
-\node (3) at (-1.5, -3) {$37$};
-\node (4) at (-1.5, -4) {$146$};
-%
-\node (5) at (1.5, -1) {$257$};
-\node (6) at (1.5, -2) {$36$};
-\node (7) at (1.5, -3) {$4$};
-\node (8) at (1.5, -4) {$1$};
-%
-\draw[-] (1)--(5); 
-\draw[-] (2)--(5); 
-\draw[-] (3)--(5); 
-\draw[-] (3)--(6); 
-\draw[-] (4)--(6); 
-\draw[-] (4)--(7); 
-\draw[-] (4)--(8);
-%
-\end{tikzpicture}
-\caption{The strong complementary pair associated to the partition $2|5|7|3|6|4|1$.}
-\label{fig:strong-complementary}
-\end{figure}
-
-There is a natural partial order on the facets of $\OP$. 
-For two elements $x,y \in [n]$, we say that the set $\{x,y\}$ is an \emph{inversion} of a facet $(\sigma,\tau)$ if we have that $x<y$, the element $x$ appears before $y$ in $\sigma$, and the element $y$ appears before $x$ in $\tau$. 
-%Visually, they appear as $\cdots | \cdots x \cdots | \cdots | \cdots y \cdots | \cdots$ in $\sigma$ and as $\cdots | \cdots y \cdots | \cdots | \cdots x \cdots | \cdots$ in $\tau$. 
-
-\begin{definition}
-    We say that two facets $(\sigma,\tau) \leq (\sigma',\tau')$ are comparable if the set of inversions of $(\sigma,\tau)$ is contained in the set of inversions of $(\sigma',\tau')$.
-\end{definition}
-
-It is immediate to see that this defines a poset.
-\Guillaume{and even a lattice if a maximal and a minimal element are added?} 
-
-\begin{proposition}
-\label{p:crossings}
-The set of inversions of a facet is in bijection with its set of edge crossings. 
-Moreover, the set of facets with no crossings is the set of strong complementary pairs. 
-\end{proposition}
-
-\begin{proof}
-    For the first part of the statement, it is clear that every inversion gives rise to a crossing. 
-    For the converse, one needs to check that an anti-inversion, where $y$ appears before $x$ in $\sigma$ and $x$ appears before $y$ in $\tau$, cannot occur in a facet of $\OP$; this follows immediately from the $(I,J)$-conditions for $|I|=|J|=1$. 
-    The second part of the statement follows from the fact that facets of the diagonal with no crossings are in bijection with permutations.
-    As explained above, from a partition one obtains a strong complementary pair, which is in $\OP$. 
-    In the other way around, given a strong complementary pair, one can read-off the partition in the associated tree, which has no crossings, by going along the edges from top to bottom, see \cref{fig:strong-complementary}.
-\end{proof}
-
-
-We aim now at characterizing the cover relations of this poset. 
-Let $(\sigma,\tau)$ be a facet of $\OP$.
-We say that a pair of adjacent blocks $\sigma_i | \sigma_{i+1}$ of $\sigma$ is \emph{admissible} if there is an element $\rho \in (\sigma_{i+1} \ssm \max\sigma_{i+1})$ such that $\rho < \min \sigma_{i}$ and $\rho < \min \gamma$ for $\gamma$ the unique path between $\sigma_i$ and $\sigma_{i+1}$. 
-Such an element $\rho$ is said to be \emph{critical}. 
-Let us define the \emph{left shift operator} $L$, which takes an admissible pair $\sigma_i | \sigma_{i+1}$ in $\sigma$ and creates a new ordered partition $L(\sigma)$ where the critical element $\rho$ is shifted one block to the left: we have $L(\sigma)_i  \eqdef  \sigma_i \cup \rho$, $L(\sigma)_{i+1}  \eqdef  \sigma_{i+1} \ssm \ \rho$, and $L(\sigma)_{j} \eqdef \sigma_j$ for all $j\neq i, i+1$. 
-
-In the same fashion, the \emph{right shift operator} $R$ sends an element $\rho \in (\tau_{i} \ssm \max\tau_{i})$ with $\rho < \min \tau_{i+1}$ and $\rho < \min \gamma$ one block to the right; the resulting ordered partition $R(\tau)$ is such that $R(\tau)_i  \eqdef  \tau_i \ssm \rho$ and $R(\tau)_{i+1}  \eqdef  \tau_{i+1} \cup \ \rho$.
-
-\begin{definition}
-    The facets of the \emph{dual SU diagonal} are the pairs or ordered partitions that can be obtained from an strong complementary pair $(\sigma,\tau)$ by iterated applications of the left shift operator $L$ on the first term $\sigma$, and iterated applications of the right shift operator $R$ on the second term $\tau$. 
-\end{definition}
-
-We shall show shortly that this definition recovers a dual of the SU diagonal on the permutahedra \cite{SaneblidzeUmble04}.
-
-\begin{lemma}
-\label{l:minima-invariance}
-    Applying the left or right shift to a pair $(\sigma,\tau) \in \OP$ does not change the minima of the paths between adjacent vertices. 
-\end{lemma}
-
-\begin{proof}
-We give the argument for the left shift, the one for the right one is similar. 
-We observe that the paths in $(L(\sigma), \tau)$ are precisely the following: either they do not contain $\rho$, in which case they are paths of $(\sigma, \tau)$; or they do contain $\rho$, in which case they are obtained from paths in $(\sigma,\tau)$ by inserting at some place the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$, or its inverse. 
-Since $\rho < \min \gamma$, adding the path $\gamma$ does not change the minima of the paths in $(L(\sigma), \tau)$, with respect to the ones in $(\sigma, \tau)$.
-\end{proof}
-
-\begin{theorem}
-\label{t:iso-with-SU}
-    The facets of the diagonal $\OP$ and the facets of the dual SU diagonal are equal. 
-\end{theorem}
-
-\begin{proof}
-Since we consider only the action of $L$ on the first term of the pair $(\sigma,\tau)$ and the action of $R$ on the second term, we will prove statements for $L$, the ones for $R$ are similar.
-
-First we show that every facet of $\OP$ is a facet of the dual SU diagonal. 
-Let $(\sigma,\tau)$ be a pair in $\OP$ and suppose that it satisfies the following property: for all pairs of consecutive blocks $\sigma_i | \sigma_{i+1}$ in $\sigma$, if $\min \sigma_i < \max \sigma_{i+1}$, then the unique path $\gamma$ between $\sigma_i$ and $\sigma_{i+1}$ has length $2$ and is given by $\{\min \sigma_i, \max \sigma_{i+1}\}$. 
-In particular, we have $\min \sigma_i \geq \min \gamma$. 
-We claim that $(\sigma,\tau)$ must be a strong complementary pair. 
-To see this, suppose that $(\sigma,\tau)$ is \emph{not} a strong complementary pair; therefore by \cref{p:crossings} there exists an edge crossing. 
-This implies that there is a minimal crossing, i.e. a crossing between edges adjacent to two consecutive blocks $\sigma_i | \sigma_{i+1}$. 
-Since edges that are incident to a block are always in increasing order from bottom to top (this is a direct consequence of the $(I,J)$-conditions for $|I|=|J|=1$), there is a crossing between $\min \sigma_i$ and $\max \sigma_{i+1}$, which contradicts the property assumed above. 
-So, there is no crossing in $(\sigma,\tau)$ and according to \cref{p:crossings}, we have that $(\sigma,\tau)$ is a strong complementary pair. 
-The proof of the inclusion is now complete: if we are given a pair of facets $(\sigma,\tau)$ in $\OP$ which has at least one crossing, then there is a pair of consecutive blocks $\sigma_i | \sigma_{i+1}$ such that $\min \sigma_i < \max \sigma_{i+1}$ and $\min \sigma_i < \min \gamma$, and one can apply the inverse operator $L^{-1}$ shifting $\min \sigma_i$ to the right; and by induction we obtain a facet of the dual SU diagonal. 
-
-Second, we show that every facet of the dual SU diagonal is in $\OP$. 
-We already know that strong complementary pairs are in $\OP$. 
-Thus, it suffices to prove that if a dual SU pair $(\sigma,\tau)$ is in $\OP$, then $(L(\sigma),\tau)$ is also in $\OP$. 
-\cref{l:minima-invariance} shows that the minima of paths between consecutive vertices in $(L(\sigma),\tau)$ are the same as the ones in $(\sigma,\tau)$. 
-Thus, all minima of paths in $(L(\sigma), \tau)$ are traversed from left to right, and we have $(L(\sigma), \tau) \in \OP$.
-\end{proof}
-
-\begin{proposition}
-    \label{p:cover-relations}
-    The cover relations of the poset of facets are precisely the pairs of the form $(\sigma,\tau) \prec (L(\sigma),\tau)$ and $(\sigma,\tau) \prec (\sigma,R(\tau))$ for some $L$ and $R$. 
-\end{proposition}
-
-\begin{proof} 
-From the proof of \cref{t:iso-with-SU}, we know that for any facet $(\sigma,\tau) \in \OP$, we have that the pairs $(L(\sigma),\tau)$ and $(\sigma,R(\tau))$ are indeed facets of $\OP$. 
-
-We show first that the left shift operator creates inversions, that is, for any $(\sigma, \tau) \in \OP$, we have that $(\sigma,\tau) \leq (L(\sigma),\tau)$. 
-Observe that shifting a critical element to the left in $\sigma$ cannot delete any inversion: if $x<y$ and $x$ precedes $y$ in $\sigma$, then $x$ must precede $y$ also in $L(\sigma)$. 
-Now, we need to show that for $x<y$, if either $y$ comes before $x$ in $\sigma$, or both $x$ and $y$ are in the same block of $\sigma$, then $y$ must come before $x$ in $\tau$. 
-But this follows immediately from the $(I,J)$-condition for $I=\{x\}$ and $J=\{y\}$ defining $\OP$. 
-The result then follows, since $\rho$ and $\max \sigma_{i+1}$ are in the same block of $\sigma$; thus $\max \sigma_{i+1}$ comes before $\rho$ in $\tau$ and the pair $(\rho,\max \sigma_{i+1})$ is an inversion of $(L(\sigma),\tau)$, which is not an inversion of $(\sigma,\tau)$. 
-
-It remains to show that if $(\sigma,\tau) \leq (\sigma',\tau) \leq (L(\sigma),\tau)$, then we have either $\sigma=\sigma'$ or $\sigma'=L(\sigma)$. 
-Indeed, if there is an inversion $(x,y)$ of $(L(\sigma),\tau)$ which is not an inversion of $(\sigma,\tau)$, then it must be that $x=\rho$. 
-To the contrary, we have $\sigma=\sigma'$, which completes the proof. 
-\end{proof}
-
-Now we give the definition of the Saneblidze--Umble diagonal \cite{SaneblidzeUmble04}, following the description below Example $1$ in \cite{saneblidzeComparingDiagonalsAssociahedra2022}, and replace "$\max$" with "$\min$" and the symbol "$>$" with the symbol "$<$".
-
-Let $(\sigma,\tau)$ be a pair of ordered partitions.
-We say that a pair of adjacent blocks $\sigma_i | \sigma_{i+1}$ of $\sigma$ is \emph{SU admissible} if there is a non-empty subset $\rho \subset (\sigma_{i+1} \ssm \max\sigma_{i+1})$ such that $\max \rho < \min \sigma_{i}$. 
-Let us define the \emph{subset left shift operator} $L^i$, which takes an SU admissible pair $\sigma_i | \sigma_{i+1}$ in $\sigma$ and creates a new ordered partition $L^i(\sigma)$ where the subset $\rho$ is shifted one block to the left: we have $L^i(\sigma)_i  \eqdef  \sigma_i \cup \rho$, $L^i(\sigma)_{i+1}  \eqdef  \sigma_{i+1} \ssm \ \rho$, and $L^i(\sigma)_{j} \eqdef \sigma_j$ for all $j\neq i, i+1$. 
-In the same fashion, the \emph{subset right shift operator} $R^i$ sends a subset $\rho \subset (\tau_{i} \ssm \max\tau_{i})$ with $\max \rho < \min \tau_{i+1}$ one block to the right; the resulting ordered partition $R^i(\tau)$ is such that $R^i(\tau)_i  \eqdef  \tau_i \ssm \rho$ and $R^i(\tau)_{i+1}  \eqdef  \tau_{i+1} \cup \ \rho$.
-
-
-\begin{definition}[Dual SU diagonal, second definition]\label{def: Dual SU diagonal, second definition}
-    The facets of the dual SU diagonal are the pairs of ordered partitions of the form $(L^{i_k}\cdots L^{i_1}(\sigma), R^{j_l}\cdots R^{j_1}(\tau))$ obtained from a strong complementary pair $(\sigma,\tau)$ by iterated application of subset left and right shifts operators, where moreover $i_1 > \cdots > i_k$ is decreasing and $j_1 < \cdots < j_l$ is increasing. 
-\end{definition}
-
-\begin{lemma}
-\label{l:minima-invariance-subset}
-    Applying the subset left or right shift to a pair $(\sigma,\tau)$ in the dual SU diagonal does not change the minima of the paths between adjacent vertices. 
-\end{lemma}
-
-\begin{proof}
-    We analyse the left shift operator, the case of the right shift is similar. 
-    First, we observe that any critical subset $\rho \subset L^{i_k}\cdots L^{i_1}(\sigma)_j, j \leq i_k$ satisfies $\max \rho < \min \gamma$, where $\gamma$ is the unique path between $L^{i_k}\cdots L^{i_1}(\sigma)_{j-1}=\sigma_{j-1}$ and $L^{i_k}\cdots L^{i_1}(\sigma)_j$. 
-    Indeed, the path $\gamma$ is the same as the path between $\sigma_{j-1}$ and $\sigma_{j}$ in $(\sigma,\tau)$, and is equal to $\{\min \sigma_{j-1}, \max \sigma_j\}$; but since $\rho$ is critical we must have $\max \rho < \min \sigma_{j-1}=\min \gamma$. 
-    The rest of the proof is the same as for \cref{l:minima-invariance}, with $\rho$ replaced by $\max \rho$. 
-\end{proof}
-
-\begin{proposition}
-    The two definitions of the dual SU diagonal coincide. 
-\end{proposition}
-
-\begin{proof}
-    We analyse the left shift operator, the case of the right shift is similar. 
-    First, we observe that any subset left shift $L^{i}(\sigma)$ can be decomposed in a series of left shifts: since $\max \rho < \min \gamma$ by the proof of \cref{l:minima-invariance-subset}, we can first shift $\max \rho$ to the left, then $\max (\rho \ssm \max \rho)$, and so on until the entire subset $\rho$ has been shifted to the left. 
-    This shows that any facet in the second definition of the dual SU diagonal is also a facet in the first definition. 
-
-    For the reverse inclusion, we show by induction on the number of left shifts that a pair $(\sigma',\tau)$ where $\sigma'$ has been obtained by iterated left shifts can also be obtained by iterated subset left shifts, that is, can be written in the form $(L^{i_k}\cdots L^{i_1}(\sigma), \tau)$.
-    The base case of a strong complementary pair is trivial. 
-    Suppose that we are given a pair $(\sigma',\tau)$ where $\sigma'$ has been obtained by a sequence of $l+1$ left shifts. 
-    By the induction hypothesis, the first $l$ left shifts can be rewritten as a sequence of subset left shifts, i.e. in the form $L^{i_k}\cdots L^{i_1}(\sigma)$ where $i_1 > \cdots > i_k$ are descreasing.
-    Now suppose that the $(l+1)$-th left shift occurs between $L^{i_k}\cdots L^{i_1}(\sigma)_j$ and $L^{i_k}\cdots L^{i_1}(\sigma)_{j+1}$, with $j> i_k$ (otherwise, we are done!). 
-    Let us denote by $\gamma$ the unique path between $L^{i_k}\cdots L^{i_1}(\sigma)_j$ and $L^{i_k}\cdots L^{i_1}(\sigma)_{j+1}$.
-    By definition, we have that the critical element $\rho$ satisfies $\rho < \min \gamma$.  
-    But by \cref{l:minima-invariance-subset}, this minimum is the same as the minimum of the path between $\sigma_j$ and $\sigma_{j+1}$, which is just $\min \sigma_j$. 
-    Thus we have $\rho < \min \sigma_j$ (as well as $\rho < \min L^{i_k}\cdots L^{i_1}(\sigma)_j$, by criticality), and so $\rho$ can be integrated in a new or an existing subset left shift of the family $L^{i_k}\cdots L^{i_1}$, which completes the proof. 
-    %also: maximum elements of each vertex never changes! so rho \neq max of its vertex
-\end{proof}
-
-One can thus interpret the left and right shift operators for singletons introduced by Saneblidze--Umble as generators of the poset of facets of the diagonal, with minimal elements the strong complementary pairs.
-
-Now, we end with two important consequences of the preceding results. 
-Consider the symmetry $s$ of the $(n-1)$-dimensional permutahedron, which consists in the reflection with respect to the hyperplane $x_1 + x_n = x_2 + x_{n-1}$. 
-It sends an ordered partition $\sigma \eqdef \sigma_1 | \ldots | \sigma_k$ to the ordered partition $s\sigma \eqdef n-\sigma_{k}+1 | \ldots | n-\sigma_{1}+1$, where $n-\sigma_i+1$ is the set $\set{n-j+1}{j \in \sigma_i}$. 
-\Kurt{This is what the next two corollaries should be i.e. altered to put max IJ =max J. Should probably combine with above.}
-\begin{corollary}
-\label{c:iso-with-SU}
-The terms of the diagonal $\OP$ and the terms of the Saneblidze--Umble diagonal are in bijection through $(\sigma,\tau) \mapsto (s\tau,s\sigma)$
-\end{corollary}
-
-\begin{proof}
-According to \cref{t:iso-with-SU}, it suffices to show that the symmetry $s$ sends the SU diagonal to the dual SU diagonal. 
-\end{proof}
-
-This allows us to prove a conjecture made in \cite[Remark 3.19]{LA21}.
-
-\begin{corollary} \label{SU from hyperplane arrangement}
-    The Saneblidze--Umble diagonal is given by the following choice of chambers in the fundamental hyperplane arrangement of the permutahedron: any vector $\vec v$ with strictly decreasing coordinates and which satisfy $\sum_{i \in I} v_i > \sum_{j \in J} v_j$ for all $I,J \subset \{1, \ldots, n\}$ such that $I \cap J = \emptyset, |I|=|J| \geq 2$ and $\max(I \cup J) \in J$ induces the Saneblidze--Umble diagonal on the $(n-1)$-dimensional standard permutahedron. 
-\end{corollary}
-
-\begin{proof}
-    These orientation vectors are obtained precisely from the ones defining $\OP$ (see \cref{s:prelim}) via the symmetry described in \cref{c:iso-with-SU} above [...]. 
-\end{proof}
-
-This gives a geometric, alternative proof of the fact that all known diagonals of the associahedra agree \cite{saneblidzeComparingDiagonalsAssociahedra2022}.
-
-\Guillaume{Thus, $(I,J)$-description for the SU diagonal...}
-
-\Guillaume{Now we have matrix representation for free!}
-
-\begin{example} \label{ex:shifts}
-The permutation $5714632$ corresponds to the strong complementary pair $(\sigma,\tau)  \eqdef  5|17|4|236 \times 57|146|3|2$. We now illustrate all possible shifts of this strong complementary pair. The possible left shifts (indicated by their corresponding critical element, and drawn to avoid crossings) are
-\begin{center}
-\begin{tikzcd}
-& 5|17|4|236 \times \tau \arrow[ld,"p=3"] \arrow[d,"p=1"] \arrow[rd,"p=2"]\\
-5|17|34|26 \times \tau \arrow[rd,"p=1"] \arrow[d,"p=2"]&
-15|7|4|236 \times \tau \arrow[rd,"p=2"] \arrow[d,"p=3"]&
-5|17|24|36 \times \tau \arrow[d,"p=1"]\\
-5|17|234|6 \times \tau \arrow[d,"p=1"]&
-15|7|34|26 \times \tau \arrow[dl,"p=2"]&
-15|17|24|36 \times \tau \\
-15|7|234|6 \times \tau
-\end{tikzcd}
-\end{center}
-The possible right shifts are simply
-\begin{center}
-\begin{tikzcd}
-\sigma \times 57|146|3|2 \arrow[r,"p=1"] & \sigma \times 57|46|13|2 \arrow[r,"p=1"] & 57|46|3|12
-\end{tikzcd}
-\end{center}
-As the left and right shifts can be performed independently we could combine these diagrams.
-No other shifts are possible, observe for instance that we cannot perform the left shift $15|7|234|6 \times 57|46|13|2 \xrightarrow{p=2} 15|27|34|6 \times 57|46|13|2$ as the minimal path connecting $234$ and $7$ contains $1$ which is smaller than $2$ (see \cref{ex:ECbijection}). The unique way of producing $15|7|234|6 \times 57|146|3|2$ by the second definition of the SU diagonal \cref{def: Dual SU diagonal, second definition} is given by
-\begin{center}
-\begin{tikzcd}
-5|17|4|236 \times 57|146|3|2 \arrow[r,"{p=\{2,3\}}"] & 5|17|234|6 \times 57|146|3|2 \arrow[r,"{p=\{1\}}"] & 15|7|234|6 \times 57|146|3|2
-\end{tikzcd}
-\end{center}
-This corresponds to combining the top two arrows in the leftmost arrows of the diagram.
-\end{example}
-
-\subsection{The Saneblidze-Umble diagonal (Version 2)}
-
-\Kurt{What do we want subscripts? superscripts? indices and/or sets?}
+\subsection{The Saneblidze-Umble diagonal}
 
 In this section we show that the $I,J$ description of $\SUD$, referred to as $\SUD$, is equivalent to the original description of Saneblidze-Umble diagonal \cite{SaneblidzeUmble04}, referred to as subset shift $\SUD$.
 We fully detail the equalities of the top row of the following commutative diagram, (Propositions \ref{prop:subset shift to shift bijection} and \ref{prop: shift SUD and SUD are equal})
